--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -5,42 +5,17 @@ block styles
 
 block contenido
     div(class="py-5")
-        h1(class="text-center text-4xl font-extrabold") Subir Archivos
+        h1(class="text-center text-4xl font-extrabold") Pantalla Principal
 
         div(class="flex flex-col md:flex-row items-center py-10 gap-4")
-            h2(class="text-sm uppercase text-gry-800 font-bold") Filtrar por servicios:
+            h2(class="text-sm uppercase text-gry-800 font-bold") Funcionaliades:
 
-            div(class="w-full md:w-auto flex items-center gap-2")
-                label(for="categorias" class="text-sm w-24 uppercase text-gray-500 font-bold") Categorias
-                select(id="categorias" class="flex-1 bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow")
-                    option(value="") - Seleccione -
-                    each categoria in categorias
-                        option(value=categoria.id)= categoria.nombre
-
-
-            div(class="w-full md:w-auto flex items-center gap-2")
-                label(for="precios" class="text-sm w-24 uppercase text-gray-500 font-bold") Precios
-                select(id="precios" class="flex-1 bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow")
-                    option(value="") - Seleccione -
-                    each precio in precios
-                        option(value=precio.id)= `${precio.nombre}`
+          
 
         div(id="mapa-inicio" class="h-[500px] mt-5")
 
 
-        section(class="py-5")
-            h2(class="text-center text-4xl font-extrabold pt-10") Servicios de hospedaje
-
-            div(class="grid grid-cols-1 lg:grid-cols-3 gap-5 mt-14")
-                each servicio in hospedaje
-                        include ./templates/card
-
-        section(class="py-5")
-            h2(class="text-center text-4xl font-extrabold pt-10") Servicios de Cuidado
-
-            div(class="grid grid-cols-1 lg:grid-cols-3 gap-5 mt-14")
-                each servicio in paseo
-                        include ./templates/card
+         
 
 block scripts 
     script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
