--- a/views/layout/includes/header-app.pug
+++ b/views/layout/includes/header-app.pug
@@ -11,13 +11,15 @@ header.bg-indigo-600.p-5
 div(class="bg-indigo-700 py-5 hidden lg:block")
     div(class="container mx-auto flex justify-between")
         nav(class="flex gap-5 items-center")
-            a(href="/categorias/1"  class="text-sm font-bold uppercase text-white") Subir Archivos
-            a(href="/categorias/2"  class="text-sm font-bold uppercase text-white") Reportes
+            a(href="/objeto/crear"  class="text-sm font-bold uppercase text-white") Crear Objetos
+            a(href="/objeto/listar"  class="text-sm font-bold uppercase text-white") Listar Objetos
+            a(href="/objeto/validacion"  class="text-sm font-bold uppercase text-white") Validacion x Objeto
+            a(href="/objeto/validacion"  class="text-sm font-bold uppercase text-white") Reportes
 
         form(action="/buscador" method="POST" class="flex gap-3 items-center")
             input(type="hidden" name="_csrf" value=csrfToken)
             label(for="termino" class="text-sm uppercase font-bold text-white") Búsqueda
-            input(type="text" id="termino" name="termino" placeholder="Buscar servicio" class="p-2 rounded-lg shadow text-sm")
+            input(type="text" id="termino" name="termino" placeholder="Buscar Tabla" class="p-2 rounded-lg shadow text-sm")
 
             input(type="submit" class="bg-indigo-800 hover:bg-indigo-400 rounded-lg text-white uppercase font-bold p-2 cursor-pointer text-sm" value="Buscar")
 
