--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -3,15 +3,20 @@ extend ../layout/index
 block contenido
 
     div.py-10
-      a(href="/")
+        a(href="/")
         h1.text-4xl.my-10.font-extrabold.text-center Calidad
             span.font-normal Datos
         h2.text-center.text-2xl.font-extrabold= pagina
         
+        if errores 
+         div(class="max-w-md mx-auto my-10")
+            each error in errores 
+                p.bg-red-600.text-white.uppercase-text-xs.text-center.p-2.mb-1.fond-bold= error.msg
+        
         
         .mt-8.mx-auto.max-w-md
             .bg-white.py-8.px-4.shadow
-                form.space-y-5(method="POST" action="/auth/registro" noValidate)
+                form.space-y-5(method="POST" action="/auth/registro" novalidate)
                     input(type="hidden" name="_csrf" value=csrfToken)
                     div
                         label.block.text-sm.uppercase.text-gray-500.mb-3.font-bold(for="nombre") Tu Nombre
