--- a/views/templates/mensaje.pug
+++ b/views/templates/mensaje.pug
@@ -2,8 +2,8 @@ extends ../layout/index
 
 block contenido
    div.py-10
-      h1.text-4xl.my-10.font-extrabold.text-center My
-        span.font-normal Paw
+      h1.text-4xl.my-10.font-extrabold.text-center Calidad
+        span.font-normal Datos
       h2.text-center.text-2xl.font-extrabold= pagina
 
       p.text-xl.font-bold.text-center.my-10= mensaje
