--- a/views/layout/includes/header-app.pug
+++ b/views/layout/includes/header-app.pug
@@ -4,11 +4,11 @@ header.bg-indigo-600.p-5
             h1.text-2xl.text-white.font-extrabold.text-center Calidad
                 span.font-normal Datos
 
-        nav(class="my-5 text-sm md:flex md:items-center md:gap-3 font-bold text-white hidden")
+        nav(class="my-1 text-sm md:flex md:items-center md:gap-3 font-bold text-white hidden")
             a(href="/auth/registro") Crear Cuenta
             a(href="/auth/login") Iniciar Sesión
 
-div(class="bg-indigo-700 py-5 hidden lg:block")
+div(class="bg-green-700 py-5 hidden lg:block")
     div(class="container mx-auto flex justify-between")
         nav(class="flex gap-5 items-center")
             a(href="/objeto/crear"  class="text-sm font-bold uppercase text-white") Crear Objetos
