--- a/views/objeto/crear.pug
+++ b/views/objeto/crear.pug
@@ -3,13 +3,9 @@ extends ../layout/app
 block styles
     link(rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css")
 
-
 block contenido
-    div.py-10
-        h1.text-4xl.my-10.font-extrabold.text-center Calidad
-            span.font-normal Datos
+    div.py-5  
         h2.text-center.text-2xl.font-extrabold= pagina
-
       
         if errores 
             div(class="max-w-md mx-auto my-10")
@@ -17,7 +13,7 @@ block contenido
                     p.bg-red-600.text-white.uppercase-text-xs.text-center.p-2.mb-1.fond-bold= error.msg
 
 
-        div(class="bg-white shadow py-8 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
+        div(class="container bg-white shadow py-8 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
 
             form.space-y-8(method="POST" action="/objeto/crear")
                 input(type="hidden" name="_csrf" value=csrfToken)
@@ -35,7 +31,7 @@ block contenido
                         textarea#nombretabla.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Nombre de la Tabla" type="text" name="nombretabla")
                         
                     div
-                        label(class="block text-sm uppercase text-gray-500 mb-3 font-bold" for="nombretabla") Nombre de la tabla
+                        label(class="block text-sm uppercase text-gray-500 mb-3 font-bold" for="nombretabla") Descripcion de la tabla
                         textarea#nombretabla.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Nombre de la Tabla" type="text" name="nombretabla")
 
 
