--- a/views/objeto/listar.pug
+++ b/views/objeto/listar.pug
@@ -5,40 +5,60 @@ block styles
 
 
 block contenido
-    div.py-10
-        h1.text-4xl.my-10.font-extrabold.text-center Calidad
-            span.font-normal Datos
+    div.py-5       
         h2.text-center.text-2xl.font-extrabold= pagina
-
         if errores 
             div(class="max-w-md mx-auto my-10")
                 each error in errores 
                     p.bg-red-600.text-white.uppercase-text-xs.text-center.p-2.mb-1.fond-bold= error.msg
-        div(class="bg-white shadow py-8 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
-            table(style='width:100%', border='1')
+        div(class="container bg-white shadow py-4 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
+            div.flex.justify-between.items-center.mb-4
+                //button(class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded") Focus de Mantenimiento
+                //button(class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded") Cerrar Mantenimiento
+                
+            table#tabla(class="stripe hover" style="width: 100%; padding-top: 1em; padding-botton: 1em;")
                 thead 
-                    tr.bg-green-500.text-gray-500.mb-3.font-bold
-                        th(class="border border-slate-600") IdObjeto
-                        th(class="border border-slate-600") Nombre Archivo
-                        th(class="border border-slate-600") Nombre Tabla
-                        th(class="border border-slate-600") Fecha de Registro
-                        th(class="border border-slate-600") Accion
+                    tr(class="bg-indigo-400 bg-opacity-100 text-white")
+                        th(data-priority=1) Id
+                        th(data-priority=2) NombreArchivo
+                        th(data-priority=3) NombreTabla
+                        th(data-priority=4) FechaRegistro
+                        th(data-priority=5) Validar
+                        th(data-priority=6) Editar
+                        th(data-priority=7) Eliminar
                 tbody 
                     tr
                         td 1
                         td personas.csv
-                        td PERSONAS
+                        td PERSONAS sfsdfsd
                         td 12/16/2023
-                        td Editar
+                        td 
+                            button(class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded") Validar
+                        td
+                            button(class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded") Editar
+                        td
+                            button(class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded") Eliminar
                     tr
                         td 2
                         td ventas.csv
                         td VENTAS
                         td 12/16/2023
-                        td Editar
+                        td 
+                            button(class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded") Validar
+                        td
+                            button(class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded") Editar
+                        td
+                            button(class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded") Eliminar
+                            
                     tr
                         td 2
                         td compras.csv
                         td COMPRAS
                         td 12/16/2023
-                        td Editar
+                        td 
+                            button(class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded") Validar
+                        td
+                            button(class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded") Editar
+                        td
+                            button(class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded") Eliminar
+                            
