--- a/views/objeto/listar.pug
+++ b/views/objeto/listar.pug
@@ -30,7 +30,7 @@ block contenido
                     tr
                         td 1
                         td personas.csv
-                        td PERSONAS sfsdfsd
+                        td PERSONAS
                         td 12/16/2023
                         td 
                             button(class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded") Validar
